Fix alignement

--- a/static/sass/_poli_courses.scss
+++ b/static/sass/_poli_courses.scss
@@ -160,6 +160,7 @@ html .find-courses .courses {
         }
         .important-dates-item-text {
           width: 71%;
+          text-align: right;
           span {
             font-weight: 700;
           }
